# custom-rustdesk

./: .gitignore  Cargo.toml  README.md  README_CN.md  build.rs  cross_compile.sh  test_i18n_coverage.sh
.github/workflows/: release.yml
i18n/: en.yml  zh.yml
src/: cli.yml  main.rs
src/app/: cli.rs  help.rs  input.rs  interactive.rs  mod.rs  operations.rs  tests.rs  uuid.rs
src/core/: crypto.rs  error.rs  handler.rs  mod.rs  operations.rs  validation.rs
