[package]
name = "custom-rustdesk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
sodiumoxide = "0.2"
rust-i18n = "2.2.2"
machine-uid = "0.5.3"

[build-dependencies]
rust-i18n = "2.2.2"
